--- a/Flutter with RDP/.devcontainer/Dockerfile
+++ b/Flutter with RDP/.devcontainer/Dockerfile
@@ -31,7 +31,7 @@ WORKDIR /home/developer
 # Install Flutter
 RUN cd /home/developer && git clone https://github.com/flutter/flutter.git
 
-WORKDIR /home/developer/workspace
+WORKDIR /home/developer/app
 
 ENV PATH $PATH:/home/developer/flutter/bin
 
