--- a/Flutter with RDP/.devcontainer/devcontainer.json
+++ b/Flutter with RDP/.devcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
   "name": "Flutter",
   "remoteUser": "developer",
-  "workspaceFolder": "/home/developer/workspace",
-  "workspaceMount": "source=${localWorkspaceFolder},target=/home/developer/workspace,type=bind",
+  "workspaceFolder": "/home/developer/app",
+  "workspaceMount": "source=${localWorkspaceFolder},target=/home/developer/app,type=bind",
   "customizations": {
     "vscode": {
       "extensions": ["Dart-Code.dart-code", "Dart-Code.flutter", "alexisvt.flutter-snippets"]
