--- a/Python with RDP/.devcontainer/Dockerfile
+++ b/Python with RDP/.devcontainer/Dockerfile
@@ -7,17 +7,22 @@ RUN apt update
 
 ARG PYTHONVER="13"
 
+# Install Python
 RUN apt install -y software-properties-common
 RUN add-apt-repository -y ppa:deadsnakes/ppa
 RUN apt update
 RUN DEBIAN_FRONTEND=noninteractive apt install -y python3.${PYTHONVER} python3.${PYTHONVER}-venv python3.${PYTHONVER}-tk
 
+# Path correct Python version
 RUN cd /usr/bin && unlink python3
 RUN cd /usr/bin && ln -s /usr/bin/python3.${PYTHONVER} python3
 
+# Install xrdp and xfce4
 RUN apt install -y xrdp xfce4 xfce4-goodies
+
 RUN apt install -y wget curl unzip git sudo nano
 
+# Install Google Chrome
 RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 RUN apt install -y ./google-chrome-stable_current_amd64.deb
 RUN rm google-chrome-stable_current_amd64.deb
@@ -34,7 +39,5 @@ RUN sed -i "s|exec /bin/sh /etc/X11/Xsession||g" /etc/xrdp/startwm.sh
 RUN echo "startxfce4" >> /etc/xrdp/startwm.sh
 
 USER developer
-
-WORKDIR /home/developer
 
 WORKDIR /home/developer/workspace
