--- a/POSIX C/.devcontainer/Dockerfile
+++ b/POSIX C/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ RUN apt update
 RUN apt install -y build-essential
 
 # Install manpages
-RUN echo "y" | unminimize
+RUN yes | unminimize
 RUN apt install -y man-db manpages-posix manpages-dev manpages-posix-dev
 
 RUN apt install -y wget curl unzip git sudo nano
