--- a/POSIX C/.devcontainer/Dockerfile
+++ b/POSIX C/.devcontainer/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:latest
 
+ARG USER="developer"
+
 RUN apt update
 
 # Install gcc
@@ -11,8 +13,8 @@ RUN apt install -y man-db manpages-posix manpages-dev manpages-posix-dev
 
 RUN apt install -y wget curl unzip git sudo nano
 
-RUN useradd -rm -d /home/developer -s /bin/bash -g root -G sudo -u 1001 -p "$(openssl passwd -1 developer)" developer
+RUN useradd -rm -d /home/${USER} -s /bin/bash -g root -G sudo -u 1001 -p "$(openssl passwd -1 ${USER})" ${USER}
 
-USER developer
+USER ${USER}
 
-WORKDIR /home/developer/workspace
+WORKDIR /home/${USER}/workspace
