--- a/Python with RDP/.devcontainer/Dockerfile
+++ b/Python with RDP/.devcontainer/Dockerfile
@@ -3,12 +3,13 @@
 
 FROM ubuntu:latest
 
+ARG PYTHONVER="13"
+ARG USER="developer"
+
 RUN apt update
 
 # Install gcc
 RUN apt install -y build-essential
-
-ARG PYTHONVER="13"
 
 # Install Python
 RUN apt install -y software-properties-common
@@ -30,17 +31,17 @@ RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.d
 RUN apt install -y ./google-chrome-stable_current_amd64.deb
 RUN rm google-chrome-stable_current_amd64.deb
 
-RUN useradd -rm -d /home/developer -s /bin/bash -g root -G sudo -u 1001 -p "$(openssl passwd -1 developer)" developer
+RUN useradd -rm -d /home/${USER} -s /bin/bash -g root -G sudo -u 1001 -p "$(openssl passwd -1 ${USER})" ${USER}
 
 # xrdp and xfce4 setup
 RUN cp /etc/xrdp/xrdp.ini /etc/xrdp/xrdp.ini.bak
 RUN sed -i 's/max_bpp=32/#max_bpp=32\nmax_bpp=128/g' /etc/xrdp/xrdp.ini
 RUN sed -i 's/xserverbpp=24/#xserverbpp=24\nxserverbpp=128/g' /etc/xrdp/xrdp.ini
-RUN cd /home/developer && echo xfce4-session > .xsession
+RUN cd /home/${USER} && echo xfce4-session > .xsession
 RUN sed -i "s|test -x /etc/X11/Xsession && exec /etc/X11/Xsession||g" /etc/xrdp/startwm.sh
 RUN sed -i "s|exec /bin/sh /etc/X11/Xsession||g" /etc/xrdp/startwm.sh
 RUN echo "startxfce4" >> /etc/xrdp/startwm.sh
 
-USER developer
+USER ${USER}
 
-WORKDIR /home/developer/workspace
+WORKDIR /home/${USER}/workspace
