--- a/Python with RDP/.devcontainer/devcontainer.json
+++ b/Python with RDP/.devcontainer/devcontainer.json
@@ -8,8 +8,8 @@
       "extensions": ["ms-python.python", "kevinrose.vsc-python-indent", "donjayamanne.python-environment-manager", "njpwerner.autodocstring"]
     }
   },
-  "postCreateCommand": "(echo \"developer\n\" | sudo -k -S git config core.fileMode false) && (echo \"developer\n\" | sudo -k -S chown -R \"${USER:-$(id -un)}\" .) && (echo \"developer\n\" | sudo -k -S git config --global core.autocrlf input)",
-  "postStartCommand": "(echo \"developer\n\" | sudo -k -S /etc/init.d/xrdp stop) && (echo \"developer\n\" | sudo -k -S /etc/init.d/xrdp start)",
+  "postCreateCommand": "echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
+  "postStartCommand": "echo \"developer\n\" | sudo -k -S ./.devcontainer/postStartCommand.bash",
   "dockerFile": "Dockerfile",
   "runArgs": ["-p", "3389:3389", "--name", "dev-environment-python", "--privileged"]
 }
