--- a/Flutter/.devcontainer/devcontainer.json
+++ b/Flutter/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
       "extensions": ["Dart-Code.dart-code", "Dart-Code.flutter", "alexisvt.flutter-snippets"]
     }
   },
-  "postCreateCommand": "echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreatCommand.bash",
+  "postCreateCommand": "sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
   "dockerFile": "Dockerfile",
   "runArgs": ["--name", "dev-environment-flutter", "--privileged"]
 }
