--- a/POSIX C/.devcontainer/devcontainer.json
+++ b/POSIX C/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
       "extensions": ["ms-vscode.cpptools-extension-pack"]
     }
   },
-  "postCreateCommand": "echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
+  "postCreateCommand": "sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
   "dockerFile": "Dockerfile",
   "runArgs": ["--name", "dev-environment-c", "--privileged"]
 }
