--- a/VueJS/.devcontainer/devcontainer.json
+++ b/VueJS/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
       "extensions": ["vue.volar"]
     }
   },
-  "postCreateCommand": "echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
+  "postCreateCommand": "sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
   "dockerFile": "Dockerfile",
   "runArgs": ["--name", "dev-environment-vuejs", "--privileged"]
 }
