--- a/Flutter/.devcontainer/devcontainer.json
+++ b/Flutter/.devcontainer/devcontainer.json
@@ -2,13 +2,14 @@
   "name": "Flutter",
   "remoteUser": "developer",
   "workspaceFolder": "/home/developer/app",
-  "workspaceMount": "source=${localWorkspaceFolder},target=/home/developer/app,type=bind",
+  "workspaceMount": "source=${localWorkspaceFolderBasename},target=/home/developer/app,type=volume",
   "customizations": {
     "vscode": {
       "extensions": ["Dart-Code.dart-code", "Dart-Code.flutter", "alexisvt.flutter-snippets"]
     }
   },
-  "postCreateCommand": "sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
+  "postCreateCommand": "echo \"developer\n\" | sudo -k -S chown -R \"${USER:-$(id -un)}\" . && echo \"developer\n\" | sudo -k -S sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
+  "context": "..",
   "dockerFile": "Dockerfile",
   "runArgs": ["--name", "dev-environment-flutter", "--privileged"]
 }
