--- a/Python with RDP/.devcontainer/devcontainer.json
+++ b/Python with RDP/.devcontainer/devcontainer.json
@@ -2,14 +2,15 @@
   "name": "Python",
   "remoteUser": "developer",
   "workspaceFolder": "/home/developer/workspace",
-  "workspaceMount": "source=${localWorkspaceFolder},target=/home/developer/workspace,type=bind",
+  "workspaceMount": "source=${localWorkspaceFolderBasename},target=/home/developer/workspace,type=volume",
   "customizations": {
     "vscode": {
       "extensions": ["ms-python.python", "kevinrose.vsc-python-indent", "donjayamanne.python-environment-manager", "njpwerner.autodocstring"]
     }
   },
-  "postCreateCommand": "sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
-  "postStartCommand": "sed -i -e 's/\r$//' .devcontainer/postStartCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postStartCommand.bash",
+  "postCreateCommand": "echo \"developer\n\" | sudo -k -S chown -R \"${USER:-$(id -un)}\" . && echo \"developer\n\" | sudo -k -S sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
+  "postStartCommand": "echo \"developer\n\" | sudo -k -S sed -i -e 's/\r$//' .devcontainer/postStartCommand.bash && echo \"developer\n\" | sudo -k -S ./.devcontainer/postStartCommand.bash",
+  "context": "..",
   "dockerFile": "Dockerfile",
   "runArgs": ["-p", "3389:3389", "--name", "dev-environment-python", "--privileged"]
 }
