--- a/VueJS/.devcontainer/Dockerfile
+++ b/VueJS/.devcontainer/Dockerfile
@@ -18,3 +18,10 @@ USER ${USER}
 WORKDIR /home/${USER}/workspace
 
 COPY .. .
+
+# Give permissions to current user
+RUN echo "${USER}\n" | sudo -k -S chown -R "${USER:-$(id -un)}" .
+
+# Fix to run scripts
+RUN chmod +x .devcontainer/postCreateCommand.bash
+RUN echo "${USER}\n" | sudo -k -S sed -i -e 's/\r$//' .devcontainer/postCreateCommand.bash
