--- a/Flutter/.devcontainer/devcontainer.json
+++ b/Flutter/.devcontainer/devcontainer.json
@@ -5,11 +5,11 @@
   "workspaceMount": "source=${localWorkspaceFolderBasename},target=/home/developer/app,type=volume",
   "customizations": {
     "vscode": {
-      "extensions": ["Dart-Code.dart-code", "Dart-Code.flutter", "alexisvt.flutter-snippets"]
+      "extensions": ["Dart-Code.dart-code", "Dart-Code.flutter", "alexisvt.flutter-snippets", "robert-brunhage.flutter-riverpod-snippets"]
     }
   },
   "postCreateCommand": "echo \"developer\n\" | sudo -k -S ./.devcontainer/postCreateCommand.bash",
   "context": "..",
   "dockerFile": "Dockerfile",
-  "runArgs": ["--name", "dev-environment-flutter", "--privileged"]
+  "runArgs": ["--name", "${localWorkspaceFolderBasename}-Dev-Environment", "--privileged"]
 }
