--- a/Python with RDP/.devcontainer/devcontainer.json
+++ b/Python with RDP/.devcontainer/devcontainer.json
@@ -12,5 +12,5 @@
   "postStartCommand": "echo \"developer\n\" | sudo -k -S ./.devcontainer/postStartCommand.bash",
   "context": "..",
   "dockerFile": "Dockerfile",
-  "runArgs": ["-p", "3389:3389", "--name", "dev-environment-python", "--privileged"]
+  "runArgs": ["-p", "3389:3389", "--name", "${localWorkspaceFolderBasename}-Dev-Environment", "--privileged"]
 }
