Updated development environments to allow GUIs.

--- a/Flutter/.devcontainer/Dockerfile
+++ b/Flutter/.devcontainer/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:latest
 ARG USER="developer"
 
 RUN apt update
+RUN apt upgrade -y
 
 # Install Flutter development dependencies
 RUN apt install -y clang cmake ninja-build pkg-config libgtk-3-dev
